--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -5,10 +5,10 @@
 <section class="content">
   <section class="invoice">
 
-    {{form.valid}}
-    {{form.value | json}}
+    <!--{{orderForm.valid}}-->
+    <!--{{orderForm.value | json}}-->
 
-    <form #form="ngForm" novalidate>
+    <form [formGroup]="orderForm" novalidate>
       <div class="row">
         <div class="col-xs-12">
           <h2 class="page-header">
@@ -16,26 +16,43 @@
           </h2>
         </div>
       </div>
-
+      <div class="row">
+        <div class="col-xs-12">
+          <p class="lead">Seus Dados:</p>
+        </div>
+      </div>
       <div class="row invoice-info">
         <div class="col-xs-12">
           <p class="lead">Endereço de Entrega:</p>
         </div>
         <div class="col-sm-6 col-xs-12">
+          <mt-input-container errorMensagem="Campo obrigatório e com 5 caracteres" label="Nome">
+            <input class="form-control" formControlName="name" placeholder="Nome" autocomplete="false">
+          </mt-input-container>
+        </div>
+        <div class="col-sm-3 col-xs-6">
+          <mt-input-container errorMensagem="E-mail inválido" label="E-mail">
+            <input class="form-control" formControlName="email" placeholder="E-mail" autocomplete="false">
+          </mt-input-container>
+        </div>
+        <div class="col-sm-3 col-xs-6">
+          <mt-input-container errorMensagem="E-mail inválido" label="E-mail">
+            <input class="form-control" formControlName="emailConfirmation" placeholder="Confirmação do e-mail" autocomplete="false">
+          </mt-input-container>
+        </div>
+        <div class="col-sm-6 col-xs-12">
           <mt-input-container errorMensagem="Campo obrigatório e com 5 caracteres" label="Endereço">
-            <input class="form-control" name="address" ngModel required minlength="5" placeholder="Endereço"
-                   autocomplete="false">
+            <input class="form-control" formControlName="address" placeholder="Endereço" autocomplete="false">
           </mt-input-container>
         </div>
         <div class="col-sm-3 col-xs-6">
           <mt-input-container errorMensagem="Campo obrigatório e somente números">
-            <input class="form-control" name="number" ngModel required pattern="^[0-9]*$" placeholder="Número"
-                   autocomplete="false">
+            <input class="form-control" formControlName="number" placeholder="Número" autocomplete="false">
           </mt-input-container>
         </div>
         <div class="col-sm-3 col-xs-6">
           <mt-input-container>
-            <input class="form-control" name="optinalAddress" ngModel placeholder="Complemento" autocomplete="false">
+            <input class="form-control" formControlName="optionalAddress" placeholder="Complemento" autocomplete="false">
           </mt-input-container>
         </div>
         <!-- /.col -->
@@ -61,7 +78,7 @@
           <p class="lead">Formas de Pagamento:</p>
 
           <div class="form-group">
-            <mt-radio [options]="paymentoptions" name="paymentOption" required ngModel></mt-radio>
+            <mt-radio [options]="paymentoptions" formControlName="paymentOption"></mt-radio>
           </div>
 
         </div>
@@ -78,7 +95,7 @@
 
     <div class="row">
       <div class="col-xs-12">
-        <button (click)="checkOrder(form.value)" class="btn btn-success pull-right" [disabled]="!form.valid || cartItems().length === 0">
+        <button (click)="checkOrder(orderForm.value)" class="btn btn-success pull-right" [disabled]="!orderForm.valid || cartItems().length === 0">
           <i class="fa fa-credit-card"></i> Concluir Pedido
         </button>
       </div>
