--- a/src/app/restaurants/restaurants.component.html
+++ b/src/app/restaurants/restaurants.component.html
@@ -1,22 +1,30 @@
 <!-- INíCIO do CONTEÚDO -->
 <section class="content-header">
-  <h1>
-    Todos os Restaurantes
-  </h1>
-</section>
+    <h1>
+        Todos os Restaurantes
+        <a class="search-link pull-right"><i class="fa fa-search"></i></a>
+    </h1>
 
+    <!--barra de busca-->
+    <!--<div class="row">-->
+        <!--<div class="col-xs-12" [@toggleSearch]="searchBarState">-->
+            <!--<form>-->
+                <!--<div class="form-group">-->
+                    <!--<input type="text" class="form-control" placeholder="O que você está procurando?">-->
+                <!--</div>-->
+            <!--</form>-->
+        <!--</div>-->
+    <!--</div>-->
+</section>
 
 <section class="content">
-
-  <div class="row">
-    <div *ngFor="let restaurant of restaurants" class="col-sm-6 col-xs-12">
-      <mt-restaurant [restaurant]="restaurant"></mt-restaurant>
-      <!-- /.info-box -->
+    <div class="row">
+        <div *ngFor="let restaurant of restaurants" class="col-sm-6 col-xs-12">
+            <mt-restaurant [restaurant]="restaurant"></mt-restaurant>
+            <!-- /.info-box -->
+        </div>
+        <!-- /.col -->
     </div>
-    <!-- /.col -->
-
-  </div>
 
 </section>
-
 <!-- FIM  do CONTEÚDO -->
